syntax = "proto3";

package arithmetics;

option go_package = "./arithmetics";

import "number_msg.proto";

service ArithmeticService {
    rpc GetAddition(OperationParameters) returns (Answer){}
    rpc GetSubtraction(OperationParameters) returns (Answer){}
    rpc GetMultiplication(OperationParameters) returns (Answer){}
    rpc GetDivision(OperationParameters) returns (Answer){}
}