syntax = "proto3";


package arithmetics;

option go_package = "./arithmetics";

message Answer {
    int32 value = 1;
}

message OperationParameters {
    int32 a = 1;
    int32 b = 2;
}


